  * Reshuffle the packages, also to improve the dependencies for each
    component:
    - new marble-qt-data: split from marble-data, contains the data needed for
      libmarblewidget, and marble-qt; make libmarblewidget, and marble-data
      depend on it
    - new plasma-marble: contains all the Plasma-related bits; move the Plasma
      dependencies for it from marble-data (Closes: #884027)

 -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 02 Jan 2018 18:12:11 +0100

marble (4:17.08.3-2) unstable; urgency=medium

  * Team upload.
  * Upload to unstable. (see #883624)
  * Bump Standards-Version to 4.1.2, no changes required.
  * Adjust l10npkgs_firstversion_ok to the version where kde-l10n will
    drop translations.

 -- Pino Toscano <pino@debian.org>  Sat, 09 Dec 2017 09:58:03 +0100

marble (4:17.08.3-1) experimental; urgency=medium

  * Team upload.
  * New upstream release.
  * Merge changes from 4:16.08.3-2.
  * Simplify watch file, and switch it to https.
  * Remove unused debian/meta/cmake-ignore file.
  * Remove unused build dependencies: libkf5config-dev, libkf5service-dev,
    libopencv-core-dev, libopencv-highgui-dev, libopencv-imgproc-dev,
    libprotobuf-dev, libquazip5-dev, python-dev, qtscript5-dev, and sip-dev
    - explicitly add libkf5plasma-dev
  * Update symbols file.

 -- Pino Toscano <pino@debian.org>  Thu, 30 Nov 2017 21:32:54 +0100

marble (4:17.08.1-1) experimental; urgency=medium

  * New upstream release (17.08.1)
  * Bump Standards-Version to 4.1.0.
  * Update upstream metadata
  * Update build-deps and deps with the info from cmake
  * Update symbols files
  * Bump kde-l10n breaks/replaces versions
  * Release to experimental

 -- Maximiliano Curia <maxy@debian.org>  Mon, 18 Sep 2017 15:06:41 +0200

marble (4:17.08.1-0neon) xenial; urgency=medium

  * New release

 -- Neon CI <neon@kde.org>  Tue, 05 Sep 2017 14:06:12 +0000

marble (4:17.08.0-0neon) xenial; urgency=medium

  * New release
