@@ -1,3 +1,0 @@
-# extra license files
-./usr/share/marble/data/LICENSE.txt
-./usr/share/marble/data/licenses/
